c/w2v_bert_uk.h

#ifndef W2V_BERT_UK_H
#define W2V_BERT_UK_H

/* Generated by cbindgen. Do not edit manually. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

#define W2V_BERT_UK_OK 0

#define W2V_BERT_UK_ERROR -1

typedef struct W2vBertUkOptions {
  const char *model;
  const char *tokenizer;
  const char *lm;
  const char *ort_dylib_path;
  const char *ort_optimization;
  const char *w2v_model_source;
  const char *const *hot_words;
  uint32_t beam_width;
  float lm_weight;
  float word_bonus;
  uintptr_t hot_words_len;
  float hot_word_bonus;
  uint32_t fallback_sample_rate;
  uint32_t w2v_sample_rate;
  uint32_t w2v_feature_size;
  uint32_t w2v_stride;
  uint32_t w2v_feature_dim;
  float w2v_padding_value;
  uint32_t blank_id;
  uint32_t n_best;
  int32_t log_language_model;
  int32_t log_accelerator;
  int32_t skip_decode_errors;
  int32_t normalize_spaces;
  int32_t drop_empty_candidates;
  int32_t lm_bos;
  int32_t lm_eos;
} W2vBertUkOptions;

typedef struct W2vBertUkTranscriber {
  uint8_t _private[0];
} W2vBertUkTranscriber;

struct W2vBertUkOptions w2v_bert_uk_options_default(void);

int32_t w2v_bert_uk_initialize_ort(const char *ort_dylib_path, bool *initialized);

int32_t w2v_bert_uk_preload_cuda_dylibs(const char *cuda_lib_dir, const char *cudnn_lib_dir);

int32_t w2v_bert_uk_transcribe_file(const char *audio_file,
                                    const struct W2vBertUkOptions *options,
                                    char **transcript);

int32_t w2v_bert_uk_transcribe_bytes(const unsigned char *audio_bytes,
                                     uintptr_t audio_bytes_len,
                                     const char *format_hint,
                                     const struct W2vBertUkOptions *options,
                                     char **transcript);

int32_t w2v_bert_uk_transcriber_new(const struct W2vBertUkOptions *options,
                                    struct W2vBertUkTranscriber **transcriber);

void w2v_bert_uk_transcriber_free(struct W2vBertUkTranscriber *transcriber);

int32_t w2v_bert_uk_transcriber_transcribe_file(struct W2vBertUkTranscriber *transcriber,
                                                const char *audio_file,
                                                char **transcript);

int32_t w2v_bert_uk_transcriber_transcribe_bytes(struct W2vBertUkTranscriber *transcriber,
                                                 const unsigned char *audio_bytes,
                                                 uintptr_t audio_bytes_len,
                                                 const char *format_hint,
                                                 char **transcript);

char *w2v_bert_uk_last_error_message(void);

void w2v_bert_uk_string_free(char *value);

#endif  /* W2V_BERT_UK_H */