csharp/NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace W2vBertUk.Native
{
    public static unsafe partial class NativeMethods
    {
        const string __DllName = "w2v_bert_uk";





        [DllImport(__DllName, EntryPoint = "w2v_bert_uk_options_default", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern W2vBertUkOptions w2v_bert_uk_options_default();

        [DllImport(__DllName, EntryPoint = "w2v_bert_uk_initialize_ort", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int w2v_bert_uk_initialize_ort(byte* ort_dylib_path, bool* initialized);

        [DllImport(__DllName, EntryPoint = "w2v_bert_uk_preload_cuda_dylibs", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int w2v_bert_uk_preload_cuda_dylibs(byte* cuda_lib_dir, byte* cudnn_lib_dir);

        [DllImport(__DllName, EntryPoint = "w2v_bert_uk_transcribe_file", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int w2v_bert_uk_transcribe_file(byte* audio_file, W2vBertUkOptions* options, byte** transcript);

        [DllImport(__DllName, EntryPoint = "w2v_bert_uk_transcribe_bytes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int w2v_bert_uk_transcribe_bytes(byte* audio_bytes, nuint audio_bytes_len, byte* format_hint, W2vBertUkOptions* options, byte** transcript);

        [DllImport(__DllName, EntryPoint = "w2v_bert_uk_transcriber_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int w2v_bert_uk_transcriber_new(W2vBertUkOptions* options, W2vBertUkTranscriber** transcriber);

        [DllImport(__DllName, EntryPoint = "w2v_bert_uk_transcriber_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void w2v_bert_uk_transcriber_free(W2vBertUkTranscriber* transcriber);

        [DllImport(__DllName, EntryPoint = "w2v_bert_uk_transcriber_transcribe_file", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int w2v_bert_uk_transcriber_transcribe_file(W2vBertUkTranscriber* transcriber, byte* audio_file, byte** transcript);

        [DllImport(__DllName, EntryPoint = "w2v_bert_uk_transcriber_transcribe_bytes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int w2v_bert_uk_transcriber_transcribe_bytes(W2vBertUkTranscriber* transcriber, byte* audio_bytes, nuint audio_bytes_len, byte* format_hint, byte** transcript);

        [DllImport(__DllName, EntryPoint = "w2v_bert_uk_last_error_message", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* w2v_bert_uk_last_error_message();

        [DllImport(__DllName, EntryPoint = "w2v_bert_uk_string_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void w2v_bert_uk_string_free(byte* value);


    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct W2vBertUkOptions
    {
        public byte* model;
        public byte* tokenizer;
        public byte* lm;
        public byte* ort_dylib_path;
        public byte* ort_optimization;
        public byte* w2v_model_source;
        public uint beam_width;
        public float lm_weight;
        public float word_bonus;
        public uint fallback_sample_rate;
        public uint w2v_sample_rate;
        public uint w2v_feature_size;
        public uint w2v_stride;
        public uint w2v_feature_dim;
        public float w2v_padding_value;
        public uint blank_id;
        public uint n_best;
        public int log_language_model;
        public int log_accelerator;
        public int skip_decode_errors;
        public int normalize_spaces;
        public int drop_empty_candidates;
        public int lm_bos;
        public int lm_eos;
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct W2vBertUkTranscriber
    {
        public fixed byte _private[1];
    }



}
